@@ -70,15 +70,14 @@ setup_myemergeopts(){
 	else
 		clst_myemergeopts="--quiet"
 	fi
-	if [ -n "${clst_PKGCACHE}" ]
-	then
-		export clst_myemergeopts="${clst_myemergeopts} --usepkg --buildpkg --newuse"
-		export bootstrap_opts="-r"
-	fi
 	if [ -n "${clst_FETCH}" ]
 	then
 		export bootstrap_opts="-f"
 		export clst_myemergeopts="${clst_myemergeopts} -f"
+	elif [ -n "${clst_PKGCACHE}" ]
+	then
+		export clst_myemergeopts="${clst_myemergeopts} --usepkg --buildpkg --newuse"
+		export bootstrap_opts="-r"
 	fi
 }
 
